# raspberry-pi-pico

./: .gitignore  ATTACH_DEVICE_2-7.md  AUTOMATED_FLASHING.md  CMakeLists.txt  FIX_PERMISSIONS.md  FLASH_INSTRUCTIONS.md  FLASH_SUCCESS.md  FLASH_SUCCESS_GUIDE.md  LICENSE  README.md  RUNTIME_FLASHING.md  USBIPD_5.1.0_COMMANDS.md  VSCODE_SETUP.md  WSL2_USB_SETUP.md  WSL_USB_SETUP.md  requirements.txt  setup_env.sh  wait_and_flash.sh
examples/c/: CMakeLists.txt  FLASHING_CAPABILITIES.md  blink_led.c  blink_led_enhanced.c  demo_temperature_enhanced.sh  flash_direct.sh  flash_temperature_demo.sh  manual_flash.sh  temperature_enhanced.c  temperature_sensor.c  temperature_simple.c  test_serial.sh
examples/micropython/: blink_led.py
src/c/: runtime_update.c  runtime_update.h
tools/: demo_enhanced_monitor.sh  enhanced_monitor.py  flash_auto.sh  flash_pico_windows.bat  openocd_config.cfg  pico_flash.py  requirements.txt  runtime_flash.sh  setup_usb_permissions.sh  test_usb_permissions.sh
